force-app/main/default/objects/Course_Offering__c/fields/Course_Master__c.field-meta.xml
<CustomField>
    <fullName>Course_Master__c</fullName>
    <label>Course Master</label>
    <referenceTo>Course_Master__c</referenceTo>
    <relationshipName>Course_Offerings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>