force-app/main/default/objects/Course_Offering__c/fields/Module_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Module_Agenda__c</fullName>
    <label>Module Agenda</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>