force-app/main/default/objects/Course_Offering__c/fields/Module_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Module_Weightage__c</fullName>
    <formula>Total_Sessions__c  /Course_Master__r.Total_Sessions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>