force-app/main/default/objects/Course_Offering__c/fields/Total_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions__c</fullName>
    <label>Total Sessions</label>
    <summaryForeignKey>Course_Schedule__c.Course_Offering__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>