force-app/main/default/objects/Course_Offering__c/listViews/All_Courses_Modules.listView-meta.xml
<ListView>
    <fullName>All_Courses_Modules</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Course_Master__c</columns>
    <columns>Order__c</columns>
    <columns>Total_Sessions__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Courses Modules</label>
</ListView>